# fast-api

fastapi/project_1/: books.py  main.py  problem.txt  pyproject.toml  pyvenv.cfg
fastapi/project_1/project_1/: books.py
fastapi/project_1/test/pythonproject/: pyproject.toml
fastapi/project_2/: 1.py  put.py  test.py
learn_api_upload/: tut1.py  tut2.py
project_1/: books.py  books_POST.py  pyproject.toml
s2. python installer and refresher/: 16.py  17.py  17_a.py  17_b.py  24.py  28.py  31.py  34.py  37.py
s2. python installer and refresher/OOP/: enemy.py  main.py
s2. python installer and refresher/OOP/OOP2/: try1.py
section_3/: main.py  pyproject.toml
