[project]
name = "project-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiodns>=3.5.0",
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.13",
    "bcrypt==4.0.1",
    "cryptography>=45.0.5",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "passlib>=1.7.4",
    "pip>=25.1.1",
    "psycopg2-binary>=2.9.10",
    "pymysql>=1.1.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.35.0",
]

[tool.uv.workspace]
members = [
    "project_1",
]
